# osu-tracker

./: CMakeLists.txt  CMakePresets.json  README.md  mingw-toolchain.cmake
.github/workflows/: cmake-multi-platform.yml  codeql.yml
cli-osu-tracker/: CMakeLists.txt  api.h  config.h  ext.h  main.cpp
cli-osu-tracker/header/: api.h  config.h  console.h  ext.h  logger.h  webserver.h
cli-osu-tracker/includes/crow/: logging.h  middleware.h
cli-osu-tracker/tracker_txt/: README BEFORE CHANGING FILES
cli-osu-tracker/tracker_txt/template/: scoreRank_gained_template.txt
cli-osu-tracker/www/: index.html
cli-osu-tracker/www/static/: index.css
osu-tracker/: CMakeLists.txt  CMakePresets.json  build-debug.sh  build-release.sh  debug.sh  linux-config.sh  main.cpp  release.sh  test.cpp  update.cpp
osu-tracker/header/: api.h  config.h  console.h  ext.h  ui.h  webserver.h
osu-tracker/header/ui/: draw.h  extc.h  ui.h  ui_linux.c  ui_windows.c
osu-tracker/includes/: catch_amalgamated.cpp  catch_amalgamated.hpp
osu-tracker/includes/crow/: app.h  http_response.h  http_server.h  version.h
osu-tracker/includes/nuklear/: nuklear_glfw_gl2.h
osu-tracker/lib/cpr/cpr/: curlholder.cpp  curlmultiholder.cpp  multiperform.cpp  threadpool.cpp  timeout.cpp
osu-tracker/lib/cpr/include/cpr/: cpr.h
osu-tracker/lib/curl/: curl_config.h
osu-tracker/lib/curl/include/curl/: curl.h
osu-tracker/lib/curl/lib/: curl_config.h  easy.c  multi.c  share.c
osu-tracker/lib/static/: libcurl.lib
osu-tracker/libs/LIB_Debug/: zlibstaticd.lib
osu-tracker/libs/LIB_Release/: cpr.lib  libcurl.lib  zlibstatic.lib
osu-tracker/tracker_txt/: README BEFORE CHANGING FILES  README BEFORE CHANGING FILES.txt
osu-tracker/tracker_txt/template/: _output_template.txt
osu-tracker/www/: index.html  info.html  log.html  settings.html  tracker.html
osu-tracker/www/static/: index.css
